Add support for running commercial tests under JDK17