@@ -58,7 +58,7 @@
 
     <failsafe.argLine>-Xmx1g -XX:+HeapDumpOnOutOfMemoryError
       -XX:HeapDumpPath=${project.build.directory} -XX:+ExitOnOutOfMemoryError
-      -Dfile.encoding=UTF-8 --illegal-access=permit
+      -Dfile.encoding=UTF-8 --illegal-access=permit --add-opens=java.base/java.net=ALL-UNNAMED
     </failsafe.argLine>
     <groovy.version>3.0.12</groovy.version>
     <jackson.version>2.13.3</jackson.version>
